ODK-186 Fix horizontal scroll

--- a/src/main/resources/static/css/simplesidebar.css
+++ b/src/main/resources/static/css/simplesidebar.css
@@ -5,7 +5,7 @@
  */
 
  body {
-    overflow-x: hidden;
+
  }
 
 /* Toggle Styles */
